--- a/expected_files_config.json
+++ b/expected_files_config.json
@@ -52,5 +52,22 @@
         "PPF005": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
         "PPF006": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
         "PPF007": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"]
+},
+"week03":{
+    
+    
+},
+"week04":{
+
+},
+"week05":{
+
+},
+"week06":{
+
+},
+"week07":{
+
 }
+
 }
