--- a/expected_files_config.json
+++ b/expected_files_config.json
@@ -1,57 +1,62 @@
 {
     "Week01": {
-        "PPP001": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP002": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP003": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP004": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP005": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP006": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP007": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP008": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP009": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP010": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP011": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP012": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP013": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP014": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP016": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP017": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP018": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP019": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPP020": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPF001": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPF002": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPF004": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPF005": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPF006": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"],
-        "PPF007": ["Git_task.png", "Index_file_creation.png", "create_Html_file_on_Name.png", "dulingo_update.png"]
+        "PPP001":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP002":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP003":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP004":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP005":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP006":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP007":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP008":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP009":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP010":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP011":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP012":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP013":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP014":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP015":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP016":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP017":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP018":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP019":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPP020":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPF001":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPF002":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPF004":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPF005":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPF006":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ],
+"PPF007":["Git_Task","Index_File_Updation","create_Html_file_on_Name","dulingo_update" ]
+
+
     },
     "Week02": {
-        "PPP001": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP002": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP003": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP004": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP005": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP006": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP007": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP008": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP009": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP010": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP011": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP012": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP013": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP014": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP016": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP017": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP018": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP019": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPP020": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPF001": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPF002": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPF004": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPF005": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPF006": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"],
-        "PPF007": ["create_wordpress_blog_and_7articles.png", "update_linkedin_with-photo.png", "create_canva-menu.png", "download_figma_and_install.png"]
+        "PPP001":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP002":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP003":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP004":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP005":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP006":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP007":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP008":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP009":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP010":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP011":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP012":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP013":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP014":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP015":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP016":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP017":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP018":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP019":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPP020":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPF001":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPF002":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPF004":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPF005":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPF006":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ],
+        "PPF007":["create_wordpress_blog_and_7articles","update_linkedin_with-photo","create_canva-menu","download_figma_and_install" ]
+    
 },
 "week03":{
     
